<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.tambah.TambahStokActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarStok"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppin_semibold"
            android:paddingTop="5dp"
            android:text="@string/tambah_stok"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/toolbarStok"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tambah_kategori"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppin_semibold"
                android:layout_gravity="start"
                android:layout_marginTop="40dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGaris"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="15dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:entries="@array/itemBarang"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="22dp"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:entries="@array/itemCategoryGender"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="22dp"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:entries="@array/itemCategoryElectronic"
                android:visibility="gone"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="22dp"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tambah_produk"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppin_semibold"
                android:layout_gravity="start"
                android:layout_marginTop="40dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGaris"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_barang"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/poppin_semibold"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:id="@+id/edtNamabarang"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="5dp"
                android:hint="@string/masukkan_nama_barang"
                android:textSize="14sp"
                android:fontFamily="@font/poppin_regular"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stok_barang"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/poppin_semibold"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="5dp"
                android:hint="@string/ex_10"
                android:textSize="14sp"
                android:fontFamily="@font/poppin_regular"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_gambar"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/poppin_semibold"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_upload_gambar"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/image_upload_photo"
                android:padding="20dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTambahStok"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="39dp"
                android:background="@drawable/bg_button"
                android:text="@string/tambah_stok"
                android:textAllCaps="false"
                android:fontFamily="@font/poppin_semibold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>





</RelativeLayout>